--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Библиотека</h1>
+    <div><img src="https://pp.userapi.com/c851332/v851332711/4bd90/m67TEgNIQZQ.jpg" alt=""></div>
 </body>
 </html>
